--- a/scss/header.scss
+++ b/scss/header.scss
@@ -237,7 +237,27 @@
     }
 }
 
+@media screen and (min-width: 1024px){
+    .headerServiciosAires {
+        h1{ 
+            font-size: 4.5rem;
+        }
+        h2{
+            font-size: 2.5rem;
+        }
+    }
+}
 
+@media screen and (min-width: 1750px){
+    .headerServiciosAires {
+        h1{ 
+            font-size: 5.5rem;
+        }
+        h2{
+            font-size: 3.5rem;
+        }
+    }
+}
 
 /*-----------------Medias Queries-------------------*/
 
